fixed querry main text aligning

--- a/hope&help/styles/styles.css
+++ b/hope&help/styles/styles.css
@@ -30,8 +30,7 @@ header {
 }
 .header-title {
     font-size: 1.5em;
-    margin-left: 2%;
-    margin-top: 1%;
+    margin: auto auto;
 }
 .logo {
     border-right: 10px solid #a2c8e8;
@@ -135,16 +134,17 @@ footer a:hover {
 
 @media screen and (max-width: 900px) {
     h1 {
-        font-size: 1em;
+        font-size: 80%;
     }
     nav {
         padding-top: 1.5em;
     }
     main {
-        font-size: .75em;
+        font-size: 80%;
+        width: 25em;
     }
     #p1 {
-        margin-top: 0;
+        margin-top: 10px;
         margin-left: 0;
         color:#2d4e76;
         text-shadow: none;
@@ -153,7 +153,7 @@ footer a:hover {
             color: #2d4e76;
             text-shadow: none;
             margin-left: 0;
-    } 
+    }
 }  
     
 
